# apps/server/internal/docs/swagger.json
@@ -788,6 +788,76 @@
                 }
             }
         },
+        "/v1/monitor/jobs/{id}/detail": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "返回任务及执行日志",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Monitor/Job"
+                ],
+                "summary": "获取定时任务详情",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "任务ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "日志页码",
+                        "name": "logPageNum",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "日志页大小",
+                        "name": "logPageSize",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Response"
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/monitor/jobs/{id}/run": {
             "post": {
                 "security": [
@@ -5295,6 +5365,12 @@
                 "cronExpression": {
                     "type": "string"
                 },
+                "invokeParams": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "invokeTarget": {
                     "type": "string"
                 },
@@ -5323,6 +5399,12 @@
                 },
                 "cronExpression": {
                     "type": "string"
+                },
+                "invokeParams": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "invokeTarget": {
                     "type": "string"
